--- a/action.yml
+++ b/action.yml
@@ -46,6 +46,32 @@ runs:
         # Create an empty config file (workaround for issue https://github.com/juanfont/headscale/issues/2193)
         mkdir -p $HOME/.headscale && touch $HOME/.headscale/config.yaml
     
+    - id: verify-headscale-version
+      shell: bash
+      env:
+        HEADSCALE_VERSION: ${{ inputs.headscale-version }}
+      run: |
+        echo "Verifying headscale version..."
+        MIN_VERSION="0.27.1"
+        INSTALLED_VERSION=$(headscale -c $HOME/.headscale/config.yaml version -o json 2>/dev/null | jq -r '.version // empty' | sed 's/^v//' | sed 's/+.*$//' || headscale -c $HOME/.headscale/config.yaml version 2>/dev/null | grep -oE '[0-9]+\.[0-9]+\.[0-9]+' | head -1)
+        
+        if [ -z "$INSTALLED_VERSION" ]; then
+          echo "Error: Could not determine installed headscale version"
+          exit 1
+        fi
+        
+        echo "Installed version: $INSTALLED_VERSION (minimum required: $MIN_VERSION)"
+        
+        # Compare versions using sort -V (version sort)
+        # If installed version is less than minimum, it will be sorted first
+        SORTED_FIRST=$(printf '%s\n' "$MIN_VERSION" "$INSTALLED_VERSION" | sort -V | head -1)
+        if [ "$SORTED_FIRST" = "$INSTALLED_VERSION" ] && [ "$INSTALLED_VERSION" != "$MIN_VERSION" ]; then
+          echo "::error::Headscale version $INSTALLED_VERSION is below minimum required version $MIN_VERSION"
+          exit 1
+        fi
+        
+        echo "Version check passed: $INSTALLED_VERSION >= $MIN_VERSION"
+    
     - id: install-tailscale-cli
       shell: bash
       run: |
